--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Text Editor</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="shortcut icon" href="favicon.png">
 </head>
 <body>
 	
-	<div class="Tools"></div>
+	<div class="Tools">
+		<div class="area">
+			<label for="text">Title</label>
+			<input type="text" name="text" id="text" value="Like Tears In Ra">
+		</div>
+		<div class="toolbar">
+			<ul>
+				<li><a href="#"><i class="fas fa-font"></i></a></li>
+				<li><a href="#"><i class="fas fa-text-height"></i></a></li>
+				<li><a href="#"><i class="fas fa-image"></i></a></li>
+				<li><a href="#"><i class="fas fa-bold"></i></a></li>
+				<li><a href="#"><i class="fas fa-italic"></i></a></li>
+				<li><a href="#"><i class="fas fa-underline"></i></a></li>
+				<li><a href="#"><i class="fas fa-align-justify"></i></a></li>
+				<li><a href="#"><i class="fas fa-align-left"></i></a></li>
+				<li><a href="#"><i class="fas fa-align-center"></i></a></li>
+				<li><a href="#"><i class="fas fa-align-right"></i></a></li>
+			</ul>
+		</div>
+	</div>
 	<article class="Article">
 		<div class="Author">
 			<span>Roy Batty</span>
